# awRender

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
cmake/: aw_render_macros.cmake
dependencies/: CMakeLists.txt
include/aw/render/: all.h  render.h
include/aw/render/api/: command_list.h  device_fence.h  device_interface.h  device_queue.h  device_resources.h  device_shader_module.h  device_views.h  frame_buffer.h  frame_context.h  pixel_format.h  render_pass.h  render_pipeline.h  render_state.h  swap_chain.h
include/aw/render/system/: device_manager_interface.h  render_window_interface.h  shader_compiler.h
shaders/: aw_helpers.slang  awrender.slang  test.slang
src/aw/render/: all.cpp  aw_render_checks.h.in
src/aw/render/api/: command_list.cpp  device_resources.cpp  device_views.cpp  render_pipeline.cpp  render_state.cpp  swap_chain.cpp
src/aw/render/system/: device_manager_interface.cpp  render_window_interface.cpp
testbed/: CMakeLists.txt  awpk_manifest.json
testbed/shaders/: CMakeLists.txt  other.slang  test.frag  test.hlsl  test.slang  test.vert
testbed/src/: main.cpp
