include(FetchContent)

if (NOT TARGET awCore)
    add_subdirectory(awCore)
endif ()

if (NOT TARGET glfw)
    set(GLFW_BUILD_DOCS OFF CACHE BOOL "")
    set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "")
    set(GLFW_BUILD_TESTS OFF CACHE BOOL "")
    add_subdirectory(glfw)
endif ()

if (NOT TARGET fmt)
    add_subdirectory(fmt)
endif ()

if (NOT TARGET VulkanMemoryAllocator)
    add_subdirectory(VulkanMemoryAllocator)
endif ()

set(SLANG_ENABLE_SLANG_RHI OFF CACHE BOOL "")
set(SLANG_ENABLE_CUDA OFF CACHE BOOL "")
set(SLANG_ENABLE_OPTIX OFF CACHE BOOL "")
set(SLANG_ENABLE_AFTERMATH OFF CACHE BOOL "")
set(SLANG_ENABLE_SLANGC OFF CACHE BOOL "")
set(SLANG_ENABLE_SLANGD OFF CACHE BOOL "")
set(SLANG_ENABLE_SLANGI OFF CACHE BOOL "")
set(SLANG_ENABLE_SLANGI OFF CACHE BOOL "")
set(SLANG_EMBED_CORE_MODULE ON CACHE BOOL "")
set(SLANG_ENABLE_TESTS OFF CACHE BOOL "")
set(SLANG_ENABLE_EXAMPLES OFF CACHE BOOL "")
set(SLANG_EXCLUDE_DAWN ON CACHE BOOL "")
set(SLANG_EXCLUDE_TINT ON CACHE BOOL "")
add_subdirectory(slang)